--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.8",
     "@types/react-dom": "18.2.4",
+    "@types/react-input-mask": "^3.0.2",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-daisyui": "^3.1.2",
     "react-dom": "18.2.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "daisyui": "^3.0.2"
+    "daisyui": "^3.0.20"
   }
 }
