--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.8",
     "@types/react-dom": "18.2.4",
@@ -17,6 +18,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "formik": "^2.4.1",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -24,7 +26,8 @@
     "react-dom": "18.2.0",
     "react-input-mask": "^3.0.0-alpha.2",
     "tailwindcss": "3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "daisyui": "^3.0.20"
