--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-daisyui": "^3.1.2",
     "react-dom": "18.2.0",
     "react-input-mask": "^3.0.0-alpha.2",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3",
     "yup": "^1.2.0"
