--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-daisyui": "^3.1.2",
     "react-dom": "18.2.0",
     "react-input-mask": "^3.0.0-alpha.2",
